testdata/baselines/reference/submodule/compiler/isolatedDeclarationErrorTypes1.errors.txt
isolatedDeclarationErrorTypes1.ts(3,28): error TS2307: Cannot find module 'foo' or its corresponding type declarations.
isolatedDeclarationErrorTypes1.ts(5,14): error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
isolatedDeclarationErrorTypes1.ts(6,14): error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
isolatedDeclarationErrorTypes1.ts(7,14): error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.


==== isolatedDeclarationErrorTypes1.ts (4 errors) ====
    // https://github.com/microsoft/TypeScript/issues/60192
    
    import { Unresolved } from "foo";
                               ~~~~~
!!! error TS2307: Cannot find module 'foo' or its corresponding type declarations.
    
    export const foo1 = (type?: Unresolved): void => {};
                 ~~~~
!!! error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
!!! related TS9027 isolatedDeclarationErrorTypes1.ts:5:14: Add a type annotation to the variable foo1.
    export const foo2 = (type?: Unresolved | undefined): void => {};
                 ~~~~
!!! error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
!!! related TS9027 isolatedDeclarationErrorTypes1.ts:6:14: Add a type annotation to the variable foo2.
    export const foo3 = (type: Unresolved): void => {};
                 ~~~~
!!! error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
!!! related TS9027 isolatedDeclarationErrorTypes1.ts:7:14: Add a type annotation to the variable foo3.
    